// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kusama Asset Hub Nomination Pools > nomination pool creation with insufficient funds > create nomination pool with insufficient funds events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x08000000",
          "index": 80,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 20000)",
          "refTime": "(rounded 3000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pool double join test: an account can only ever be in one pool at a time > join nomination pool events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 1700000000)",
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "bonded": "(rounded 1700000000)",
      "joined": true,
      "member": "Cdbxb6S9i8s4swqGZRWhcZyrcaXmTw1MkzLjbUiADjdSo2f",
    },
    "method": "Bonded",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pool double join test: an account can only ever be in one pool at a time > join second nomination pool events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x04000000",
          "index": 80,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 20000)",
          "refTime": "(rounded 3000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pool global config test > setting global nomination pool configs with signed origin 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pool global config test > system events 1`] = `
[
  {
    "data": {
      "globalMaxCommission": "10.00%",
      "maxMembers": 2,
      "maxMembersPerPool": 2,
      "maxPools": 2,
      "minCreateBond": "(rounded 1000000000000)",
      "minJoinBond": "(rounded 1700000000)",
    },
    "method": "GlobalParamsUpdated",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pool global config test > system events 2`] = `
[
  {
    "data": {
      "globalMaxCommission": "10.00%",
      "maxMembers": 3,
      "maxMembersPerPool": 3,
      "maxPools": 3,
      "minCreateBond": "(rounded 1000000000000)",
      "minJoinBond": "(rounded 1700000000)",
    },
    "method": "GlobalParamsUpdated",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pool lifecycle test > bond extra funds events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 1000000000000)",
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "bonded": "(rounded 1000000000000)",
      "joined": false,
      "member": "Cdbxb6S9i8s4swqGZRWhcZyrcaXmTw1MkzLjbUiADjdSo2f",
    },
    "method": "Bonded",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pool lifecycle test > chill events 1`] = `
[
  {
    "data": {},
    "method": "Chilled",
    "section": "staking",
  },
  {
    "data": {
      "caller": "D2oHoVDFJGy7iDYcY7fbm82CuNycWaSxCGpsQtLqkrE9JKf",
    },
    "method": "PoolNominatorChilled",
    "section": "nominationPools",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pool lifecycle test > claim commission events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x1a000000",
          "index": 80,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pool lifecycle test > commission alteration events 1`] = `
[
  {
    "data": {
      "current": [
        "0.10%",
        "Cdbxb6S9i8s4swqGZRWhcZyrcaXmTw1MkzLjbUiADjdSo2f",
      ],
    },
    "method": "PoolCommissionUpdated",
    "section": "nominationPools",
  },
  {
    "data": {
      "maxCommission": "1.00%",
    },
    "method": "PoolMaxCommissionUpdated",
    "section": "nominationPools",
  },
  {
    "data": {
      "changeRate": {
        "maxIncrease": "100.00%",
        "minDelay": 10,
      },
    },
    "method": "PoolCommissionChangeRateUpdated",
    "section": "nominationPools",
  },
  {
    "data": {
      "permission": "Permissionless",
    },
    "method": "PoolCommissionClaimPermissionUpdated",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pool lifecycle test > create nomination pool events 1`] = `
[
  {
    "data": {
      "amount": 1000000000000,
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "depositor": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
    },
    "method": "Created",
    "section": "nominationPools",
  },
  {
    "data": {
      "bonded": 1000000000000,
      "joined": true,
      "member": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
    },
    "method": "Bonded",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pool lifecycle test > join nomination pool events 1`] = `
[
  {
    "data": {
      "amount": 1000000000000,
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "bonded": 1000000000000,
      "joined": true,
      "member": "Cdbxb6S9i8s4swqGZRWhcZyrcaXmTw1MkzLjbUiADjdSo2f",
    },
    "method": "Bonded",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pool lifecycle test > nomination pool validator selection events 1`] = `
[
  {
    "data": {
      "caller": "D2oHoVDFJGy7iDYcY7fbm82CuNycWaSxCGpsQtLqkrE9JKf",
    },
    "method": "PoolNominationMade",
    "section": "nominationPools",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 50000)",
          "refTime": "(rounded 2000000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pool lifecycle test > set state events 1`] = `
[
  {
    "data": {
      "newState": "Blocked",
    },
    "method": "StateChanged",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pool lifecycle test > set state to destroying events 1`] = `
[
  {
    "data": {
      "newState": "Destroying",
    },
    "method": "StateChanged",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pool lifecycle test > unbond (depositor) events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x08000000",
          "index": 80,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 40000)",
          "refTime": "(rounded 3000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pool lifecycle test > unbond (kick) events 1`] = `
[
  {
    "data": {
      "amount": 1000000000000,
    },
    "method": "Unbonded",
    "section": "staking",
  },
  {
    "data": {
      "balance": 1000000000000,
      "member": "Cdbxb6S9i8s4swqGZRWhcZyrcaXmTw1MkzLjbUiADjdSo2f",
      "points": 1000000000000,
    },
    "method": "Unbonded",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pool lifecycle test > unbond events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 1000000000000)",
    },
    "method": "Unbonded",
    "section": "staking",
  },
  {
    "data": {
      "balance": "(rounded 1000000000000)",
      "member": "Cdbxb6S9i8s4swqGZRWhcZyrcaXmTw1MkzLjbUiADjdSo2f",
      "points": "(rounded 1000000000000)",
    },
    "method": "Unbonded",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pool lifecycle test > update roles events 1`] = `
[
  {
    "data": {
      "bouncer": "H7L1Xh1XZxbKktdoEG5rkWdUdydq9e3NpsjmcSHpUHM8Z6h",
      "nominator": "D2oHoVDFJGy7iDYcY7fbm82CuNycWaSxCGpsQtLqkrE9JKf",
      "root": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
    },
    "method": "RolesUpdated",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pool metadata test > create nomination pool events 1`] = `
[
  {
    "data": {
      "amount": 1000000000000,
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "depositor": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
    },
    "method": "Created",
    "section": "nominationPools",
  },
  {
    "data": {
      "bonded": 1000000000000,
      "joined": true,
      "member": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
    },
    "method": "Bonded",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pool metadata test > set metadata events 1`] = `
[
  {
    "data": {
      "caller": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
    },
    "method": "MetadataUpdated",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pools update roles test > update pool roles via scheduler pallet 1`] = `
[
  {
    "event": {
      "data": [
        "D2oHoVDFJGy7iDYcY7fbm82CuNycWaSxCGpsQtLqkrE9JKf",
        "Cdbxb6S9i8s4swqGZRWhcZyrcaXmTw1MkzLjbUiADjdSo2f",
        "H7L1Xh1XZxbKktdoEG5rkWdUdydq9e3NpsjmcSHpUHM8Z6h",
      ],
      "index": "0x5008",
    },
    "phase": {
      "initialization": null,
    },
    "topics": [],
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pools update roles test > update roles events 1`] = `
[
  {
    "data": {
      "bouncer": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
      "nominator": "H7L1Xh1XZxbKktdoEG5rkWdUdydq9e3NpsjmcSHpUHM8Z6h",
      "root": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
    },
    "method": "RolesUpdated",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pools update roles test > update roles failure events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x11000000",
          "index": 80,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 800000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Asset Hub Nomination Pools > nomination pools update roles test > update roles remove self events 1`] = `
[
  {
    "data": {
      "bouncer": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
      "nominator": "H7L1Xh1XZxbKktdoEG5rkWdUdydq9e3NpsjmcSHpUHM8Z6h",
      "root": null,
    },
    "method": "RolesUpdated",
    "section": "nominationPools",
  },
]
`;
